<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2025 The LineageOS Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory>

        <org.lineageos.settings.device.preference.LayoutPreference
            android:key="hbm_header"
            android:layout="@layout/hbm_header"
            android:selectable="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/hbm_category_title">

        <SwitchPreferenceCompat
            android:key="hbm_mode"
            android:title="@string/hbm_title"
            android:summary="@string/hbm_summary"
            android:defaultValue="false" />

        <SwitchPreferenceCompat
            android:key="auto_hbm"
            android:title="@string/auto_hbm_title"
            android:summary="@string/auto_hbm_summary"
            android:defaultValue="false" />

        <SeekBarPreference
            android:key="auto_hbm_threshold"
            android:title="@string/auto_hbm_threshold_title"
            android:defaultValue="20000"
            android:max="60000"
            android:dependency="auto_hbm" />

    </PreferenceCategory>

</PreferenceScreen>
